# jogo-limpo-triagem

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: pgsi.json
docs/: ARCHITECTURE.md  CI_PLAN.md  DECISIONS.md  OWASP_LLM_AUDIT_PLAN.md  PARSER_HARDENING_PLAN.md  PLAN.md  PRD.md  RELEASE_PLAN.md  TEST_AUDIT_PLAN.md  prompts.md  slides.md
examples/: crise.md  risco-baixo.md  risco-moderado.md
reports/: sample-triagem-19777a42322a42e98deb9edcfbc4d31b-20260718T095924.json  sample-triagem-19777a42322a42e98deb9edcfbc4d31b-20260718T095924.md
src/triagem/: __init__.py  classify.py  cli.py  fakes.py  graph.py  nodes.py  parsing.py  safety.py  state.py  tools.py
tests/: conftest.py  test_adversarial.py  test_cli.py  test_copy.py  test_fakes.py  test_graph_e2e.py  test_interrupt_spike.py  test_parsing.py  test_real_llm.py  test_report.py  test_routing.py  test_safety.py  test_score.py  test_smoke.py  test_state.py  test_tools.py
