[project]
name = "triagem"
version = "0.1.0"
description = "Jogo Limpo Lab: PGSI risk triage agent built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.6",
    "langchain-openai",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triagem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
