[project]
name = "triagem"
version = "0.1.0"
description = "Jogo Limpo Lab: PGSI risk triage agent built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.6,<2",
    "langchain-openai>=1.3,<2",
    "pydantic>=2,<3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=8,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triagem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '-m "not real_llm"'
markers = [
    "real_llm: opt-in tests against the local real LLM endpoint; run explicitly via `uv run pytest -m real_llm` (see tests/test_real_llm.py)",
]
